# MOSAIC

./: .flake8  .gitignore  .pre-commit-config.yaml  CITATION  CONTRIBUTING.md  LICENSE  README.md  inference_with_slide_example.py  pyproject.toml  requirements.txt
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish.yml  version.yml
data_preprocessing/: create_data_index.py
data_preprocessing/classification/: create_classification_labels.py  create_few_shot_samples.py  create_more_classification_labels.py  prompt_to_diag_code.py
data_preprocessing/hdf5_file_conversion/: README.md  create_case_index.py  create_hdf5_file.py  hdf5_file_manager.py
data_preprocessing/text_preprocessing/: README.md  correct_case_ids.py  create_subset_of_patients.py  text_preprocessor.py
data_preprocessing/train_val_test_split/: convert_patients_to_cases.py  exclude_long_seq_len.py  train_val_test_resplitter.ipynb  train_val_test_splitter.py
docs/: dataset.md  model_configs.md  training.md
scripts/: bump_version.py
src/mosaic/: attentional_pooling.py  custom_biogpt.py  custom_coca.py  custom_hipt_vit.py  custom_lm.py  download_model.py  loss.py  model_builders.py  model_configs.py  model_factory.py  perceiver_pytorch.py  utils.py
src/mosaic/model_configs/: coca_attention_hipt4k_frozen_te.json  coca_attention_hipt4k_lora_te.json  coca_attention_hipt4k_lora_te_16.json  coca_attention_hipt4k_lora_te_8.json  coca_attention_hipt4k_unfrozen_te.json  coca_attention_hipt4k_unfrozen_te_large.json  coca_final_attention_hipt4k.json  coca_final_perceiver_hipt4k.json  coca_final_perceiver_uni.json  coca_stage_2_perceiver.json  coca_stage_2_perceiver_frozen_uni.json  coca_stage_2_perceiver_lora_hipt256.json  coca_stage_2_perceiver_lora_hipt4k.json  coca_stage_2_perceiver_lora_uni.json  coca_stage_2_perceiver_simplified.json  coca_stage_2_perceiver_unfrozen_te_hipt256.json  coca_stage_2_perceiver_unfrozen_te_hipt4k.json  coca_stage_2_perceiver_unfrozen_te_uni.json  lm_biogpt_baseline.json
src/mosaic_train/: __init__.py  data.py  distributed.py  eval_captions.py  eval_retrieval.py  eval_zero_shot.py  evaluator.py  file_utils.py  logger.py  main.py  params.py  precision.py  train.py
src/simplified/: __init__.py  pooler_encoder.py  simple_clip_model.py  simple_text_encoder.py
synthetic_data_generation/: config.py  example.ipynb  image_embedder.py  synthetic_data_generator.py  synthetic_data_pipeline.py
synthetic_data_generation/experiments/: binary.json  great_variety.json  multiclass.json  multiclass_v2.json
