[project]
name = "mosaic"
version = "0.1.0"
authors = [
  { name="Sander Moonemans", email="sander.moonemans@gmail.com" },
]
description = "mosaic is a framework for training vision-language models for computational pathology. The code has been released as part of the paper 'Pathology Report Generation and Multimodal Representation Learning for Cutaneous Melanocytic Lesions' by Lucassen et al. (2025)."
readme = "README.md"
requires-python = ">=3.10" 
keywords = ["machine learning", "natural language processing"] 
license = { text = "Apache 2.0" } 
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Development Status :: 3 - Alpha", 
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "torch==2.4.1",
    "transformers==4.44.1",
    "numpy==2.0.1",
    "peft==0.12.0",
    "sacremoses==0.1.1",
    "scikit-learn==1.5.1",
    "tensorboard==2.17.1",
    "pandas==2.2.2",
    "language-tool-python==2.8.1",
    "lorem-text==2.1",
    "matplotlib==3.9.2",
    "evaluate==0.4.3",
    "rouge-score==0.1.2",
    "nltk==3.9.1", # for evaluate meteor
    "h5py==3.12.1",
    "expecttest==0.2.1",
  # Note, please install pycocoevalcap manually, as it is not available on PyPI.
]

[project.urls]
Homepage = "https://github.com/SanderMoon/MOSAIC"
Repository = "https://github.com/SanderMoon/MOSAIC"
"Bug Tracker" = "https://github.com/SanderMoon/MOSAIC/issues"
"Changelog" = "https://github.com/SanderMoon/MOSAIC/releases"

[project.optional-dependencies]
dev = [
    "pytest==8.3.2",
    "pytest-cov==5.0.0",
    "debugpy==1.8.2",
    "black==24.8.0",
    "mypy", # For type checking
    "isort", # For import sorting
    "flake8", # For linting
    "pre-commit", # For managing pre-commit hooks
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mosaic"] # Replace with the actual name of your package directory
package-dir = {"" = "src"}

[tool.black]
line-length = 88
target-version = ['py311'] 

[tool.pytest.ini_options]
min_version = "8.3.2"
addopts = "--cov=mosaic --cov-report=term-missing" # Adjust 'your_project_name'
testpaths = [
    "tests",
]

[tool.mypy]
python_version = "3.11" # Adjust based on your minimum Python version
warn_return_any = true
warn_unused_configs = true

[tool.isort]
profile = "black"
line_length = 88

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "W503", "E501"] 
